handle composite visualizations

--- a/Recho/index.html
+++ b/Recho/index.html
@@ -30,7 +30,7 @@
 			<form id="search-form" autocomplete="off">
 		  		<input type="text" value="" placeholder="Enter subreddit" class="search-input" id="input"> 
 				<button id="intersection-button" type="button" class="char-button" title="set intersection">∩</button>
-				<button id="difference-button" type="button" class="char-button" title="set difference">\</button>
+				<button id="difference-button" type="button" class="char-button" title="set difference">-</button>
 				<button id="submit-button" type="button" class="search-button">
 					<img class="submit-button" src="assets/arrow.svg">
 				</button>
