--- a/index.html
+++ b/index.html
@@ -1,15 +1,53 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=http://mukund109.github.io/Recho">
-        <script type="text/javascript">
-            window.location.href = "http://mukund109.github.io/Recho"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://mukund109.github.io/Recho'>link to example</a>.
-    </body>
+<!DOCTYPE html>
+<html >
+<head>
+	<meta charset="UTF-8">
+	<title>Recho</title>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154635986-1"></script>
+
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-154635986-1');
+	</script>
+
+	<link rel="stylesheet" href="css/style.css">
+	
+</head>
+
+	<body>
+
+		<header>
+			
+			<a class="info" href="">About</a>
+
+			<a class="info" href="https://www.github.com/mukund109/Recho" target="_blank">Github</a>
+		</header>
+		<div id="search-container">
+			<form id="search-form" autocomplete="off">
+		  		<input type="text" value="" placeholder="Enter subreddit" class="search-input" id="input"> 
+				<button id="intersection-button" type="button" class="char-button" title="set intersection">∩</button>
+				<button id="difference-button" type="button" class="char-button" title="set difference">-</button>
+				<button id="submit-button" type="button" class="search-button">
+					<img class="submit-button" src="assets/arrow.svg">
+				</button>
+			</form>
+			<ul class="suggestion-list" id="suggestion-ul">
+			</ul>
+		</div>
+
+		<div id="svg-container">
+
+		</div>
+	
+		<script src="https://d3js.org/d3.v5.min.js"></script>
+		<script src="js/viz.js"></script>
+		<script src="js/helper.js"></script>
+		<script src="js/index.js"></script>
+		<script src="js/autocomplete.js"></script>
+
+	</body>
 </html>
