updated html head to include description, removed github link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html >
 <head>
 	<meta charset="UTF-8">
-	<title>Recho</title>
+	<title>Subreddit Space | Visualize User Activity On Reddit</title>
+	<meta name="description" content="subreddit.space helps you visualize
+ the relationships between various reddit communities (aka subreddits), and how 
+user activity is distributed across them">
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154635986-1"></script>
 
@@ -22,9 +25,8 @@
 
 		<header>
 			
-			<a class="info" href="">About</a>
+			<a class="info" href="" target="_blank">About</a>
 
-			<a class="info" href="https://www.github.com/mukund109/Recho" target="_blank">Github</a>
 		</header>
 		<div id="search-container">
 			<form id="search-form" autocomplete="off">
