adjusted marker position

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ user activity is distributed across them">
 			
 			<a class="info" href="" target="_blank">About</a>
 
+			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Issues/Suggestions</a>
+
 		</header>
 		<div id="search-container">
 			<form id="search-form" autocomplete="off">
