added lower bound to minority size, changed up colors

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ user activity is distributed across them">
 		<header>
 			
 			<a class="info" href="" target="_blank">About</a>
+			<a class="info" href="" target="_blank">Contact</a>
 
 			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Issues/Suggestions</a>
 
@@ -47,6 +48,7 @@ user activity is distributed across them">
 
 		</div>
 	
+		<div id="instructions"> Try zooming, panning, hovering and clicking </div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="js/viz.js"></script>
 		<script src="js/helper.js"></script>
