--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ user activity is distributed across them">
 			<a class="info" href="" target="_blank">About</a>
 			<a class="info" href="" target="_blank">Contact</a>
 
-			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Issues/Suggestions</a>
+			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Suggestions</a>
 
 		</header>
 		<div id="search-container">
