--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@ user activity is distributed across them">
 
 		<header>
 			
-			<a class="info" href="" target="_blank">About</a>
-			<a class="info" href="" target="_blank">Contact</a>
+			<a class="info" href="./about.html" target="_blank">About</a>
 
-			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Suggestions</a>
+			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Feedback</a>
 
 		</header>
 		<div id="search-container">
