--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@ I’m referring here to a handful of ‘cryptocurrency’ subreddits that repeat
 </ul>
 </blockquote>
 <p>Its hard to tell whether these are bots, low wage labor from developing countries, or just a weird corner of the internet. Furthermore, these strange ‘crypto’ subreddits have multiple common users, which means they show up in the plot.</p>
-<p><img src="http://viz.subreddit.space/assets/ethplode-related.png" alt="Tooltip demo"><br>
+<p><img src="https://viz.subreddit.space/assets/ethplode-related.png" alt="Tooltip demo"><br>
 These seem like attempts by the creators of said cryptocurrency to inflate its value. Whatever the case may be, for now I’ve decided to do nothing.</p>
 </div>
 </body>
