--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
 
     gtag('config', 'UA-154635986-1');
   </script>
-
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://stackedit.io/style.css">
 </head>
 
 <body class="stackedit">
