--- a/index.html
+++ b/index.html
@@ -2,57 +2,11 @@
 <html >
 <head>
 	<meta charset="UTF-8">
-	<title>Subreddit Space | Visualize User Activity On Reddit</title>
-	<meta name="description" content="subreddit.space helps you visualize
- the relationships between various reddit communities (aka subreddits), and how 
-user activity is distributed across them">
-
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154635986-1"></script>
-
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-154635986-1');
-	</script>
-
-	<link rel="stylesheet" href="css/style.css">
-	
+	<title></title>
+	<meta name="" content="">
+	<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
-
 	<body>
-
-		<header>
-			
-			<a class="info" href="./about.html" target="_blank">About</a>
-
-			<a class="info" href="https://github.com/mukund109/mukund109.github.io/issues" target="_blank">Feedback</a>
-
-		</header>
-		<div id="search-container">
-			<form id="search-form" autocomplete="off">
-		  		<input type="text" value="" placeholder="Enter subreddit" class="search-input" id="input"> 
-				<button id="intersection-button" type="button" class="char-button" title="set intersection">∩</button>
-				<button id="difference-button" type="button" class="char-button" title="set difference">-</button>
-				<button id="submit-button" type="button" class="search-button">
-					<img class="submit-button" src="assets/arrow.svg">
-				</button>
-			</form>
-			<ul class="suggestion-list" id="suggestion-ul">
-			</ul>
-		</div>
-
-		<div id="svg-container">
-
-		</div>
-	
-		<div id="instructions"> Try zooming, panning, hovering and clicking </div>
-		<script src="https://d3js.org/d3.v5.min.js"></script>
-		<script src="js/viz.js"></script>
-		<script src="js/helper.js"></script>
-		<script src="js/index.js"></script>
-		<script src="js/autocomplete.js"></script>
-
+    Namaste
 	</body>
 </html>
