--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 	<title></title>
 	<meta name="" content="">
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+<style>
+body {
+  font-family: 'Lato', sans-serif;
+}
+span {
+  text-decoration: underline dotted;
+}
+</style>
 </head>
 	<body>
-    Namaste
+    <div>
+      There are <span id="number">4.3 million</span>things in the box
+    </div>
 	</body>
+  <script src="script.js"></script>
 </html>
