fix spacing and flicker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=block" rel="stylesheet">
 <style>
 body {
   font-family: 'Lato', sans-serif;
@@ -19,7 +19,7 @@ span {
 </head>
 	<body>
     <div>
-      There are <span id="number">4.3 million</span>things in the box
+      There are <span id="number">4.3 million</span> things in the box
     </div>
 	</body>
   <script src="script.js"></script>
