--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<title></title>
 	<meta name="" content="">
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=block" rel="stylesheet">
 <style>
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: iawriter-mono, Nitti, Menlo, Courier, monospace;
+  font-size: 15px;
+  letter-spacing: 0.055em;
+  line-height: 1.6;
 }
 span {
   text-decoration: underline dotted;
