--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ span {
 </head>
 	<body>
     <div>
-      There are <span id="number">4.3 million</span> things in the box
+      There are <span id="number">4.3 mil</span> things in the box
     </div>
 	</body>
   <script src="script.js"></script>
