add another example

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ span {
 </head>
 	<body>
     <div>
+      There are <span id="another">4.3 million</span> things in the box
+    </div>
+    <div>
       There are <span id="number">4.3 mil</span> things in the box
     </div>
 	</body>
