--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 body {
   font-family: iawriter-mono, Nitti, Menlo, Courier, monospace;
   font-size: 15px;
+  color: rgb(55, 53, 47);
   letter-spacing: 0.055em;
   line-height: 1.6;
 }
